# a2a-agent-selfservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-azure.yml
docs/: A2A_PROTOCOL.md  AGENTS_AND_TOOLS.md
infra/: main.bicep
src/a2a_selfservice/: __init__.py  config.py  main.py  models.py
src/a2a_selfservice/a2a/: __init__.py  models.py  routes.py
src/a2a_selfservice/agents/: __init__.py  base.py  registry.py
src/a2a_selfservice/api/: __init__.py  routes.py
src/a2a_selfservice/storage/: __init__.py  cosmos.py
src/a2a_selfservice/tools/: __init__.py  a2a.py  calculator.py  registry.py  utilities.py  weather.py
tests/: __init__.py  conftest.py  test_api.py
